--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,6 +9,7 @@ dependencies = [
     "pydantic>=2.11.7",
     "pydantic-settings>=2.9.1",
     "uvicorn[standard]>=0.34.3",
+    "loguru>=0.7.2",
 ]
 
 [project.scripts]
