--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,7 +1,7 @@
 [project]
-name = "ai-herbal-formula-system"
+name = "fastapi-starter"
 version = "0.1.0"
-description = "Add your description here"
+description = "FastAPI starter"
 readme = "README.md"
 requires-python = ">=3.12"
 dependencies = [
