--- a/pyproject.toml
+++ b/pyproject.toml
@@ -13,8 +13,8 @@ dependencies = [
 ]
 
 [project.scripts]
-dev = "server.main:dev"
-start = "server.main:start"
+dev = "app.main:dev"
+start = "app.main:start"
 
 [build-system]
 requires = ["hatchling", "setuptools>=61.0"]
@@ -24,7 +24,7 @@ build-backend = "hatchling.build"
 # ... existing code ...
 
 [tool.hatch.build.targets.wheel]
-packages = ["server"]
+packages = ["app"]
 
 [dependency-groups]
 dev = [
@@ -32,7 +32,7 @@ dev = [
 ]
 
 [tool.ruff]
-src = ["server"]
+src = ["app"]
 line-length = 120
 
 [tool.ruff.lint]
