--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,39 +5,47 @@ description = "FastAPI starter"
 readme = "README.md"
 requires-python = ">=3.14"
 dependencies = [
-    "fastapi>=0.115.13",
+    "fastapi[standard]>=0.115.13",
     "pydantic>=2.11.7",
     "pydantic-settings>=2.9.1",
-    "uvicorn[standard]>=0.34.3",
     "loguru>=0.7.2",
 ]
 
-[project.scripts]
-dev = "app.main:dev"
-start = "app.main:start"
-
-[build-system]
-requires = ["hatchling", "setuptools>=61.0"]
-build-backend = "hatchling.build"
-
-[tool.hatch.version]
-# ... existing code ...
-
-[tool.hatch.build.targets.wheel]
-packages = ["app"]
-
 [dependency-groups]
 dev = [
-    "ruff>=0.12.0",
+    "ruff>=0.14.3",
+    "mypy>=1.18.1",
 ]
 
+[tool.mypy]
+exclude = ["venv", ".venv", "alembic"]
+
 [tool.ruff]
-src = ["app"]
-line-length = 120
+target-version = "py310"
+exclude = ["alembic"]
 
 [tool.ruff.lint]
-select = ["E", "F", "I", "W", "C90", "N"]
-ignore = []
+select = [
+    "E",  # pycodestyle errors
+    "W",  # pycodestyle warnings
+    "F",  # pyflakes
+    "I",  # isort
+    "B",  # flake8-bugbear
+    "C4",  # flake8-comprehensions
+    "UP",  # pyupgrade
+    "ARG001", # unused arguments in functions
+    "T201",   # print statements are not allowed
+]
+ignore = [
+    "E501",  # line too long, handled by black
+    "B008",  # do not perform function calls in argument defaults
+    "W191",  # indentation contains tabs
+    "B904",  # Allow raising exceptions without from e, for HTTPException
+]
+
+[tool.ruff.lint.pyupgrade]
+# Preserve types, even if a file imports `from __future__ import annotations`.
+keep-runtime-typing = true
 
 [tool.ruff.format]
 quote-style = "double"
