--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,12 +9,17 @@ dependencies = [
     "pydantic>=2.11.7",
     "pydantic-settings>=2.9.1",
     "loguru>=0.7.2",
+    "sqlmodel>=0.0.27",
+    "passlib[bcrypt]>=1.7.4",
+    "pyjwt>=2.10.1",
+    "bcrypt>=5.0.0",
 ]
 
 [dependency-groups]
 dev = [
+    "mypy>=1.19.1",
     "ruff>=0.14.3",
-    "mypy>=1.18.1",
+    "types-passlib>=1.7.7.20250602",
 ]
 
 [tool.mypy]
