--- a/pyproject.toml
+++ b/pyproject.toml
@@ -13,7 +13,20 @@ dependencies = [
     "passlib[bcrypt]>=1.7.4",
     "pyjwt>=2.10.1",
     "bcrypt>=5.0.0",
+    "alembic>=1.17.2",
 ]
+
+[project.scripts]
+dev = "scripts.commands:dev"
+start = "scripts.commands:start"
+migrate-dev = "scripts.commands:migrate_dev"
+migrate-prod = "scripts.commands:migrate_prod"
+make-migrations = "scripts.commands:make_migrations"
+lint = "scripts.commands:lint"
+
+[tool.setuptools.packages.find]
+include = ["app*", "scripts*"]
+exclude = ["logs*", "alembic*", "openspec*"]
 
 [dependency-groups]
 dev = [
@@ -21,6 +34,9 @@ dev = [
     "ruff>=0.14.3",
     "types-passlib>=1.7.7.20250602",
 ]
+
+[tool.uv]
+package = true
 
 [tool.mypy]
 exclude = ["venv", ".venv", "alembic"]
