refactor: 更新数据库配置，整合pymysql依赖，新增数据库初始化脚本

--- a/.env.example
+++ b/.env.example
@@ -21,12 +21,13 @@ FRONTEND_HOST=http://localhost:3000
 # Can be a JSON list or a comma-separated string
 # BACKEND_CORS_ORIGINS=http://localhost:3000, http://localhost:8000
 
-# MySQL Database
-MYSQL_SERVER=localhost
-MYSQL_PORT=3306
-MYSQL_USER=root
-MYSQL_PASSWORD=changethis
-MYSQL_DB=fastapi_starter
+# Database
+DB_SCHEME=mysql+pymysql
+DB_SERVER=localhost
+DB_PORT=3306
+DB_USER=root
+DB_PASSWORD=changethis
+DB_NAME=fastapi_starter
 
 # Initial Superuser
 FIRST_SUPERUSER=admin@example.com
