--- a/pyproject.toml
+++ b/pyproject.toml
@@ -14,6 +14,7 @@ dependencies = [
     "pyjwt>=2.10.1",
     "bcrypt>=5.0.0",
     "alembic>=1.17.2",
+    "pymysql>=1.1.2",
 ]
 
 [project.scripts]
@@ -33,6 +34,7 @@ dev = [
     "mypy>=1.19.1",
     "ruff>=0.14.3",
     "types-passlib>=1.7.7.20250602",
+    "types-pymysql>=1.1.0.20251220",
 ]
 
 [tool.uv]
@@ -43,7 +45,7 @@ exclude = ["venv", ".venv", "alembic"]
 
 [tool.ruff]
 target-version = "py310"
-exclude = ["alembic"]
+exclude = ["venv", ".venv", "alembic"]
 
 [tool.ruff.lint]
 select = [
