--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,11 +10,10 @@ dependencies = [
     "pydantic-settings>=2.9.1",
     "loguru>=0.7.2",
     "sqlmodel>=0.0.27",
-    "passlib[bcrypt]>=1.7.4",
     "pyjwt>=2.10.1",
-    "bcrypt>=5.0.0",
     "alembic>=1.17.2",
     "pymysql>=1.1.2",
+    "pwdlib[argon2,bcrypt]>=0.3.0",
 ]
 
 [project.scripts]
@@ -33,7 +32,6 @@ exclude = ["logs*", "alembic*", "openspec*"]
 dev = [
     "mypy>=1.19.1",
     "ruff>=0.14.3",
-    "types-passlib>=1.7.7.20250602",
     "types-pymysql>=1.1.0.20251220",
 ]
 
