--- a/pyproject.toml
+++ b/pyproject.toml
@@ -13,7 +13,7 @@ dependencies = [
     "pyjwt>=2.10.1",
     "alembic>=1.17.2",
     "pymysql>=1.1.2",
-    "pwdlib[argon2,bcrypt]>=0.3.0",
+    "pwdlib[argon2]>=0.3.0",
 ]
 
 [project.scripts]
